# SimpleEq

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
